--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development"
   },
   "repository": {
     "type": "git",
@@ -28,8 +29,12 @@
     "@babel/preset-env": "^7.18.2",
     "babel-loader": "^8.2.5",
     "babel-runtime": "^6.26.0",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "regenerator-runtime": "^0.13.9",
+    "stylus": "^0.58.1",
+    "stylus-loader": "^7.0.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
