--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "babel-runtime": "^6.26.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "regenerator-runtime": "^0.13.9",
     "stylus": "^0.58.1",
     "stylus-loader": "^7.0.0",
+    "url-loader": "^4.1.1",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
