--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "stylus-loader": "^7.0.0",
     "terser-webpack-plugin": "^5.3.3",
     "url-loader": "^4.1.1",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.2"
   },
